tirar tamanho fixo de imagem

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
     <section class="joke">
     </section>
     <section class="joke joke-end joke-full">
-        <img loading="lazy" width="360px" height="602px" alt="Dinossauro dizendo Meteoro" src="../imagens/mefeoro.webp" />
+        <img loading="lazy" width="100%" height="auto" alt="Dinossauro dizendo Meteoro" src="../imagens/mefeoro.webp" />
     </section>
 
     <style>
