--- a/index.html
+++ b/index.html
@@ -59,14 +59,17 @@
     <nav class="navbar">
         <div class="container">
             <a class="navbar-brand" [routerLink]="['/']" alt="Ir para a Home">
-                <img loading="lazy"alt="Imperium larp" width="116px" height="55px" src="./imagens/logo-imperium.webp" alt="Logo em letras brancas escrito Imperium LARP">
+                <img id="logoImperium" loading="lazy"alt="Imperium larp" width="116px" height="55px" src="./imagens/logo-imperium.webp" alt="Logo em letras brancas escrito Imperium LARP">
             </a>
         </div>
     </nav>
     <main role="main">
         <ul>
             <li class="links" style="pointer-events: none;">
-                <a href="http://" target="_blank" rel="noopener noreferrer">Sem data para um próximo evento ainda</a>
+                <a href="http://" target="_blank" rel="noopener noreferrer">Sem data para um próximo evento!</a>
+            </li>
+            <li class="links">
+                <a href="https://www.imperiumlarp.com.br" target="_blank" rel="noopener noreferrer">Nosso site</a>
             </li>
             <li class="links">
                 <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M96 0C43 0 0 43 0 96V416c0 53 43 96 96 96H384h32c17.7 0 32-14.3 32-32s-14.3-32-32-32V384c17.7 0 32-14.3 32-32V32c0-17.7-14.3-32-32-32H384 96zm0 384H352v64H96c-17.7 0-32-14.3-32-32s14.3-32 32-32zm32-240c0-8.8 7.2-16 16-16H336c8.8 0 16 7.2 16 16s-7.2 16-16 16H144c-8.8 0-16-7.2-16-16zm16 48H336c8.8 0 16 7.2 16 16s-7.2 16-16 16H144c-8.8 0-16-7.2-16-16s7.2-16 16-16z"/></svg>
@@ -88,21 +91,21 @@
                     <path
                         d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z" />
                 </svg>
-                <a href="http://" target="_blank" rel="noopener noreferrer">INSTAGRAM</a>
+                <a href="https://www.instagram.com/imperiumlarprs" target="_blank" rel="noopener noreferrer">INSTAGRAM</a>
             </li>
             <li class="links">
                 <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
                     <path
                         d="M549.655 124.083c-6.281-23.65-24.787-42.276-48.284-48.597C458.781 64 288 64 288 64S117.22 64 74.629 75.486c-23.497 6.322-42.003 24.947-48.284 48.597-11.412 42.867-11.412 132.305-11.412 132.305s0 89.438 11.412 132.305c6.281 23.65 24.787 41.5 48.284 47.821C117.22 448 288 448 288 448s170.78 0 213.371-11.486c23.497-6.321 42.003-24.171 48.284-47.821 11.412-42.867 11.412-132.305 11.412-132.305s0-89.438-11.412-132.305zm-317.51 213.508V175.185l142.739 81.205-142.739 81.201z" />
                 </svg>
-                <a href="http://" target="_blank" rel="noopener noreferrer">YOUTUBE</a>
+                <a href="https://www.youtube.com/channel/UCZMMMX6f3X_KJ5t9KFX1eCw" target="_blank" rel="noopener noreferrer">YOUTUBE</a>
             </li>
             <li class="links">
                 <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
                     <path
                         d="M400 32H48A48 48 0 0 0 0 80v352a48 48 0 0 0 48 48h137.25V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.27c-30.81 0-40.42 19.12-40.42 38.73V256h68.78l-11 71.69h-57.78V480H400a48 48 0 0 0 48-48V80a48 48 0 0 0-48-48z" />
                 </svg>
-                <a href="http://" target="_blank" rel="noopener noreferrer">FACEBOOK</a>
+                <a href="https://www.facebook.com/imperiumlarprs" target="_blank" rel="noopener noreferrer">FACEBOOK</a>
             </li>
         </ul>
     </main>
@@ -251,6 +254,28 @@
         }
     </style>
 
+    <script>
+        let brand = document.querySelector(".navbar-brand");
+        brand.addEventListener("click",()=>{
+            navigator.vibrate(350);
+            window.addEventListener('deviceorientation', deviceOrientationHandler, false);
+        })
+
+        function deviceOrientationHandler (eventData) {
+            var tiltLR = eventData.gamma;
+            var tiltFB = eventData.beta;
+            var dir = eventData.alpha;
+
+            // document.getElementById("doTiltLR").innerHTML = Math.round(tiltLR);
+            // document.getElementById("doTiltFB").innerHTML = Math.round(tiltFB);
+            // document.getElementById("doDirection").innerHTML = Math.round(dir);
+
+            let logo = document.querySelector("#logoImperium");
+            logo.style.webkitTransform = "rotate(" + tiltLR + "deg) rotate3d(1,0,0, " + (tiltFB * -1) + "deg)";
+            logo.style.MozTransform = "rotate(" + tiltLR + "deg)";
+            logo.style.transform = "rotate(" + tiltLR + "deg) rotate3d(1,0,0, " + (tiltFB * -1) + "deg)";
+        }
+    </script>
 </body>
 
 </html>
