Atualizar 'data do evento'

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <main role="main">
         <ul>
             <li class="links" style="pointer-events: none;">
-                <a href="http://" target="_blank" rel="noopener noreferrer">Sem data para um próximo evento!</a>
+                <a href="http://" target="_blank" rel="noopener noreferrer">Data em breve!! ¿¿¿¿¿¿¿🌑🌒🌓🌔🌕🌖🌗🌘🌑???????</a>
             </li>
             <li class="links">
                 <a href="https://www.imperiumlarp.com.br" target="_blank" rel="noopener noreferrer">Nosso site</a>
