Atualização dos tomos e link com os ingressos para o evento

--- a/index.html
+++ b/index.html
@@ -66,20 +66,23 @@
     <main role="main">
         <ul>
             <li class="links" style="pointer-events: none;">
-                <a href="http://" target="_blank" rel="noopener noreferrer">Data em breve!! ¿¿¿¿¿¿¿🌑🌒🌓🌔🌕🌖🌗🌘🌑???????</a>
+                <a href="http://" target="_blank" rel="noopener noreferrer">A Tormânia te espera em 12 de Julho de 2025!</a>
+            </li>
+            <li class="links">
+                <a href="https://www.sympla.com.br/evento/imperium-larp-2025-sombras-de-nobilia/2949880" target="_blank" rel="noopener noreferrer">INGRESSOS AQUI</a>
             </li>
             <li class="links">
                 <a href="https://www.imperiumlarp.com.br" target="_blank" rel="noopener noreferrer">Nosso site</a>
             </li>
             <li class="links">
                 <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M96 0C43 0 0 43 0 96V416c0 53 43 96 96 96H384h32c17.7 0 32-14.3 32-32s-14.3-32-32-32V384c17.7 0 32-14.3 32-32V32c0-17.7-14.3-32-32-32H384 96zm0 384H352v64H96c-17.7 0-32-14.3-32-32s14.3-32 32-32zm32-240c0-8.8 7.2-16 16-16H336c8.8 0 16 7.2 16 16s-7.2 16-16 16H144c-8.8 0-16-7.2-16-16zm16 48H336c8.8 0 16 7.2 16 16s-7.2 16-16 16H144c-8.8 0-16-7.2-16-16s7.2-16 16-16z"/></svg>
-                <a href="https://drive.google.com/file/d/1rDknYIGlO2p23X6xbN1m7X1GUASMkM3N/view" target="_blank"
-                    rel="noopener noreferrer">Tomo de regras básicas</a>
+                <a href="https://drive.google.com/file/d/1gdF0GuRLPX5U_-JTedF3PAgyURxNgNQc/view?usp=sharing" target="_blank"
+                    rel="noopener noreferrer">Tomo de regras básicas 2.0</a>
             </li>
             <li class="links">
                 <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M96 0C43 0 0 43 0 96V416c0 53 43 96 96 96H384h32c17.7 0 32-14.3 32-32s-14.3-32-32-32V384c17.7 0 32-14.3 32-32V32c0-17.7-14.3-32-32-32H384 96zm0 384H352v64H96c-17.7 0-32-14.3-32-32s14.3-32 32-32zm32-240c0-8.8 7.2-16 16-16H336c8.8 0 16 7.2 16 16s-7.2 16-16 16H144c-8.8 0-16-7.2-16-16zm16 48H336c8.8 0 16 7.2 16 16s-7.2 16-16 16H144c-8.8 0-16-7.2-16-16s7.2-16 16-16z"/></svg>
-                <a href="https://drive.google.com/file/d/1hWsQYYmevKxcKglzfVozlOFjpx4N7F-v/view?usp=sharing"
-                    target="_blank" rel="noopener noreferrer">Tomo de personagens</a>
+                <a href="https://drive.google.com/file/d/14pHw_-IK4PulwaWpkTXmU0jjXv-OMEe7/view?usp=sharing"
+                    target="_blank" rel="noopener noreferrer">Tomo de personagens 3.0</a>
             </li>
             <li class="links">
                 <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M149.1 64.8L138.7 96H64C28.7 96 0 124.7 0 160V416c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V160c0-35.3-28.7-64-64-64H373.3L362.9 64.8C356.4 45.2 338.1 32 317.4 32H194.6c-20.7 0-39 13.2-45.5 32.8zM256 384c-53 0-96-43-96-96s43-96 96-96s96 43 96 96s-43 96-96 96z"/></svg>
