teste github actions

--- a/index.html
+++ b/index.html
@@ -65,17 +65,15 @@
     </nav>
     <main role="main">
         <ul>
+            <li class="links">
+                <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="#000000" viewBox="0 0 256 256"><path d="M208,56H180.28L166.65,35.56A8,8,0,0,0,160,32H96a8,8,0,0,0-6.65,3.56L75.71,56H48A24,24,0,0,0,24,80V192a24,24,0,0,0,24,24H208a24,24,0,0,0,24-24V80A24,24,0,0,0,208,56Zm8,136a8,8,0,0,1-8,8H48a8,8,0,0,1-8-8V80a8,8,0,0,1,8-8H80a8,8,0,0,0,6.66-3.56L100.28,48h55.43l13.63,20.44A8,8,0,0,0,176,72h32a8,8,0,0,1,8,8ZM128,88a44,44,0,1,0,44,44A44.05,44.05,0,0,0,128,88Zm0,72a28,28,0,1,1,28-28A28,28,0,0,1,128,160Z"></path></svg>
+                <a href="https://drive.google.com/drive/folders/1ntld3Ipfn7xiWPHudQKcrJkz-LqEexOQ" target="_blank" rel="noopener noreferrer">📸 FOTOS SOMBRAS DE NOBILIA</a>
+            </li>
             <li class="links" style="pointer-events: none;">
                 <a href="http://" target="_blank" rel="noopener noreferrer">Sem data para o próximo evento</a>
             </li>
             <li class="links">
                 <a href="https://www.imperiumlarp.com.br" target="_blank" rel="noopener noreferrer">Nosso site</a>
-            </li>
-            <li class="links">
-                <a href="https://www.imperiumlarp.com.br/login" target="_blank" rel="noopener noreferrer">Cadastre seu personagem!</a>
-            </li>
-            <li class="links">
-                <a href="https://www.imperiumlarp.com.br/cancoes-de-bardos" target="_blank" rel="noopener noreferrer">Canções de Bardos</a>
             </li>
             <li class="links">
                 <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M96 0C43 0 0 43 0 96V416c0 53 43 96 96 96H384h32c17.7 0 32-14.3 32-32s-14.3-32-32-32V384c17.7 0 32-14.3 32-32V32c0-17.7-14.3-32-32-32H384 96zm0 384H352v64H96c-17.7 0-32-14.3-32-32s14.3-32 32-32zm32-240c0-8.8 7.2-16 16-16H336c8.8 0 16 7.2 16 16s-7.2 16-16 16H144c-8.8 0-16-7.2-16-16zm16 48H336c8.8 0 16 7.2 16 16s-7.2 16-16 16H144c-8.8 0-16-7.2-16-16s7.2-16 16-16z"/></svg>
