--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Links Imperium LARP.</title>
+    <title>Links Imperium LARP</title>
 
     <style>
 
@@ -18,14 +18,7 @@
             align-items: center;
             font-family: Arial, Helvetica, sans-serif;
             font-size: 15px;
-            background: rgb(0, 0, 0);
-            background: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%,
-                    rgba(33, 66, 59, 1) 30%,
-                    rgba(25, 34, 51, 1) 50%,
-                    rgba(73, 37, 75, 1) 60%,
-                    rgba(72, 73, 36, 1) 70%,
-                    rgba(70, 36, 36, 1) 88%,
-                    rgba(0, 0, 0, 1) 100%);
+            background: #171717;
         }
 
         main {
