atualizar o background do navbar

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         }
 
         .navbar {
-            background: rgb(66, 33, 33);
-            background: linear-gradient(180deg, rgba(66, 33, 33, 1) 45%, rgba(0, 0, 0, 1) 111%);
+            /* background: rgb(66, 33, 33);
+            background: linear-gradient(180deg, rgba(66, 33, 33, 1) 45%, rgba(0, 0, 0, 1) 111%); */
             height: 90px;
             line-height: 90px;
             display: flex;
